Update build.gradle for OpenJDK 11; fix deprecated Long constructor call